# misis2026s-25-17-marinin-m-a

./: CMakeLists.txt
prj.labs/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.labs/rational/: CMakeLists.txt  rational.cpp  СMakeLists.txt
prj.test/: CMakeLists.txt  rational_test.cpp
